# superdoka-backend

./: .dockerignore  .env.prod.example  .gitignore  BuildUp-Presentation.md  CLAUDE.md  DETAILED_COMPARISON.md  Dockerfile  Dockerfile.2stages  Dockerfile_DEB_MIRROR  FIX_SUMMARY.md  GROUP_MESSAGE_ENDPOINT_REVIEW.md  README_ANALYSIS.md  alembic.ini  closed-domain-agentic-architecture.md  demo_seed.py  docker-compose-with-Ollama.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sandbox_legacy.py  setup.sh  vfm.sh
.claude/: settings.local.json
READMEs/: ANALYSIS_AND_FIXES.md  ANALYSIS_REPORT.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md
alembic/: env.py  script.py.mako
alembic/versions/: 000_initial_tables.py  001_add_group_tables.py  002_vfm_agency_tables.py  003_rename_telegram_id.py  004_add_machine_alias.py  005_fix_assignment_constraint.py  2026_05_18_2146_daee4d3832d5_add_conversation_log_table.py  2026_05_24_add_rephrasing_rejected_to_conversation_log.py
app/: config.py  init_db.py  main.py
app/adapters/: telegram_adapter.py
app/api/: deps.py  ui.py
app/core/: VFM_PERSONA.md  context_graph.py  context_llm.py  context_prompt.py  injection_guard.py  intelligence_router.py  llm_fallback.py  model_loader.py  model_profiles.py  ner_handler.py  persona.py  rephraser.py  (+2 more)
static/: demo.html  logbuk-neo.html  operator_screen.html  owner_screen.html  sandbox.html
tests/: test_context_intelligence.py  test_e2e_message_flow.py  test_ner_corpus.py  test_vfm_integration.py
vfm_demo/: README.md  demo_seed.py  requirements.txt  sandbox.py
(+19 files in other folders)
